--- a/projetofinalcvti/index.html
+++ b/projetofinalcvti/index.html
@@ -1,3 +1,4 @@
+<!--Não precisa começar o comando ! - enter: copie daqui-->
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -14,7 +15,7 @@
 <body>
     <nav style="background-image:url(img/cultura.png)" class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="#"><img src="img/logoo.png" width="150px" alt=""></a>
+          <a class="navbar-brand" href="#"><img src="img/logoo.png" vspace="0" width="130px"  alt=""></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -22,25 +23,25 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-                <a class="nav-link" href="#" style="color:white;" >História</a>
+                <b><a class="nav-link" href="pagina1.html" style="color:rgb(255, 166, 0); text-shadow: black 0.1em 0.1em 0.2em">História</a></b>
               </li>
       <li class="nav-item">
-                <a class="nav-link" href="#"style="color:white;">Eventos</a>
+        <b><a class="nav-link" href="#" style="color:rgb(255, 166, 0); text-shadow: rgb(0, 0, 0) 0.1em 0.1em 0.2em">Eventos</a></b>
               </li>
       <li class="nav-item">
-                <a class="nav-link" href="#"style="color:white;">Cursos</a>
+        <b><a class="nav-link" href="#" style="color:rgb(255, 166, 0); text-shadow: black 0.1em 0.1em 0.2em">Cursos</a></b>
               </li>
       <li class="nav-item">
-                <a class="nav-link" href="#"style="color:white;">Biblioteca</a>
+        <b><a class="nav-link" href="#" style="color:rgb(255, 166, 0); text-shadow: black 0.1em 0.1em 0.2em">Biblioteca</a></b>
               </li>
       <li class="nav-item">
-                <a class="nav-link" href="#"style="color:white;">Exposição</a>
+        <b><a class="nav-link" href="#" style="color:rgb(255, 166, 0); text-shadow: black 0.1em 0.1em 0.2em">Exposição</a></b>
               </li>
       </ul>
       </div>
-      </div>
-      </nav>
-      
+      </nav> 
+    <!--Antes de Começar a fazer sua pagina, até aqui-->
+
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -134,16 +135,5 @@
             <span></span>
             <span></span>
           </div>
-          </div>
-         </div>
-        </div>
-        <main>
-            <section class="google-map">
-                <div class="map-frame">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1546.874685075173!2d-43.45125761991741!3d-22.76134460837363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x996706b1009f1d%3A0xab3ace7a1309eb2c!2sCasa%20de%20Cultura%20de%20Nova%20Igua%C3%A7u%20-%20Complexo%20Cultural!5e0!3m2!1spt-BR!2sbr!4v1685592585633!5m2!1spt-BR!2sbr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                </div>
-            </section>
-        </main>
           
-        </div>
 </html>
