--- a/evento-final/eventos-final/eventos.html
+++ b/evento-final/eventos-final/eventos.html
@@ -60,16 +60,16 @@
     </div>
 
 
-  <div class="wrap">
+  <div class="wrap"> <!--Se necessário editar aqui e no CSS o nome da class-->
   <!--1º Banner-->
-  <div class="tile"> 
+  <div class="tile"> <!--Se necessário editar aqui e no CSS o nome da class-->
     <img src="img/peca-1.jpeg"/>
-    <div class="text">
-     <h1></h1>
-     <h2 class="animate-text">Esqueletos no armário</h2>
+    <div class="text"><!--Se necessário editar aqui e no CSS o nome da class-->
+   <h1></h1> 
+     <h2 class="animate-text">Esqueletos no armário</h2><!--Se necessário editar aqui e no CSS o nome da class-->
      <p class="animate-text">O que será que acontece ao se abrirem os “armários” de quatro internas de um manicômio judicial, através do aparecimento de uma jovem doutora?</p>
 
-     <div class="dots">
+     <div class="dots"><!--Se necessário editar aqui e no CSS o nome da class-->
       <div class="animate-text">
           <a class="btn btn-warning" href="https://www.sympla.com.br/evento/esqueletos-no-armario/1699665" target="_blank" >Confira</a>
           </div>
