--- a/historiaFINAL/história.html
+++ b/historiaFINAL/história.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-
-   <nav style="background-image:url(img/Navbar.png)" class="navbar navbar-expand-lg navbar-light fixed-top">
-     <div class="container">
-       <a class="navbar-brand" href="index.html"><img src="img/logoo.png" vspace="0" width="130px"  alt=""></a>
+<div class="altura">
+   <nav style="background-image:url(img/cultura.png)" class="navbar navbar-expand-lg navbar-light fixed-top">
+    <!-- <div class="container"> -->
+       <a class="navbar-brand" href="index.html"><img src="img/logoo.png" width="150px" alt=""></a>
        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
        </button>
@@ -38,18 +38,17 @@
    <li class="nav-item">
      <b><a class="nav-link" href="exposicao.html" style="color:rgb(255, 166, 0); text-shadow: black 0.1em 0.1em 0.2em">Exposição</a></b>
           </li>
- 
-   </ul>
-   </div>
-   </nav> 
-   </div>
+ </ul>
+ </div>
  </nav>
  </div>
  
+ 
+ <div class="banner2">
+  <h1>História</h1>
+ </div>
   <!--aqui seria o navbar-->
 <br>
-
-<base href="">
 
 
 <main>
@@ -82,7 +81,22 @@
   <br>
 <p>O casarão ficou conhecido primeiro como Casa de Cultura Ney Alberto, em homenagem a um grande historiador Iguaçuano que trabalhou por vários anos ajudando alunos a dissertarem trabalhos de faculdade na sala onde se encontrava,mas logo após o nome mudou em homenagem a Sylvio Monteiro: ator, compositor, teatrólogo, animador cultural e grande defensor da arte popular na Baixada Fluminense.</p>
 	
-		
+</div>	
+
+
+</article>
+</main>
+</div>
+
+
+
+
+
+
+
+
+
+
 <!--AQUI SERIA O RODAPÉ-->
 <div id="footer-contact">
   <div class="container-fluid mt-3">
